@@ -1,6 +1,7 @@
 2002-07-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
-	* inuse.ht (Links): Add Internet Nebraska.
+	* inuse.ht (Links): Add Internet Nebraska, 2ndmail.com, and
+	eScrubber.
 	
 2002-07-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
